<resources>
    <string name="app_name">Tonality</string>
    <string name="about_tonality_file">about-tonality.html</string>
    <string name="title_root_note">Select Root Note</string>
    <string name="title_scale_name">Select Scale</string>

    <!-- Piano Preferences -->
    <string name="piano_labelnotes">Label keys</string>
    <string name="piano_labelc">Label C keys only</string>
    <string name="piano_labelintervals">Label Intervals</string>
    <string name="piano_row_direction">Lower notes on top</string>
    <string name="piano_theme_less">Use less colors</string>
    <string name="reset_keyboard">Reset</string>
    <string name="piano_circleoffifths">Circle of Fifths note selector</string>
    
    <!-- Scale names -->
    <string name="scale_none">No Scale</string>
    <string name="scale_natural_major">Natural Major</string>
    <string name="scale_natural_minor">Natural Minor</string>
    <string name="scale_harmonic_minor">Harmonic Minor</string>
    <string name="scale_melodic_minor">Melodic Minor</string>
    <string name="scale_pentatonic_major">Pentatonic Major</string>
    <string name="scale_pentatonic_minor">Pentatonic Minor</string>
    <string name="scale_whole_tone">Whole Tone</string>

    <!-- Greek scales -->
    <string name="scale_ionian">Greek: Ionian</string>
    <string name="scale_dorian">Greek: Dorian</string>
    <string name="scale_phrygian">Greek: Phrygian</string>
    <string name="scale_lydian">Greek: Lydian</string>
    <string name="scale_mixolydian">Greek: Myxolydian</string>
    <string name="scale_aeolian">Greek: Aeolian</string>
    <string name="scale_locrian">Greek: Locrian</string>
</resources>
